Make sure the discovery bar and the main content are correctly aligned

--- a/Resources/public/css/layout.css
+++ b/Resources/public/css/layout.css
@@ -145,12 +145,7 @@
     min-height: 100%;
 }
 
-.is-app-open .ez-view-container {
-    display: block;
-}
-
 .ez-view-container {
-    display: none;
     width: 100%;
 }
 
