--- a/Resources/public/css/theme.css
+++ b/Resources/public/css/theme.css
@@ -352,7 +352,7 @@
 }
 
 /* location view view */
-.ez-view-locationviewview {
+.ez-locationview-content {
     background: #fff;
 }
 
